# wire-upgrade-tool

./: .gitignore  README.md  install-wire-upgrade.sh  pyproject.toml
.github/workflows/: release.yml
docs/: upgrade-report-2026-03-10.md
docs/adr/: 0001-overall-architecture.md  0002-sync-values-strategy.md  0003-validate-values-standalone-command.md  0004-install-or-upgrade-design.md  0005-cassandra-backup-design.md
tests/: test_kubeconfig_optional.py  test_values_sync.py
tests/VALUES/: cluster-secrets.yaml  cluster-values.yaml  template-secrets.yaml  template-values.yaml
wire_upgrade/: __init__.py  __main__.py  assets_compare.py  cassandra_backup.py  chart_install.py  chart_operations.py  cleanup_containerd_images.py  commands.py  config.py  inventory_sync.py  kubeconfig_setup.py  orchestrator.py  values_sync.py  values_validate.py  wire_sync_binaries.py  wire_sync_chart_images.py  wire_sync_images.py  wire_sync_lib.py
