[project]
name = "wire-upgrade"
dynamic = ["version"]
description = "Wire Upgrade CLI"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",
]

[project.scripts]
wire-upgrade = "wire_upgrade.orchestrator:app"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# version is derived from git tags (e.g. v0.2.0 → 0.2.0)
# between tags it produces 0.2.0.dev3+gabcdef

[tool.setuptools.packages.find]
where = ["."]
include = ["wire_upgrade"]
